--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ _autosave-*
 *-save.kicad_pcb
 fp-info-cache
 *-backups/
-formula.kicad_sym
+parts/schematic/formula.kicad_sym
 
 # Netlist files
 *.net
