--- a/vehicle/mkv/software/throttle/BUILD
+++ b/vehicle/mkv/software/throttle/BUILD
@@ -24,6 +24,7 @@ cc_firmware(
         "//libs/gpio",
         "//libs/timer",
         "//projects/btldr:btldr_lib",
+        "//libs/tunables",
     ],
 )
 
