--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -228,6 +228,8 @@ publish:
             - REG_B
             - REG_C
             - REG_D
+            - REG_E
+            - REF_F
       - name: voltage_1
         slice: 16 + 16
         unit:
