--- a/libs/tunables/tunables.yml
+++ b/libs/tunables/tunables.yml
@@ -7,16 +7,19 @@
     current_value: 2.3
     date_modified: 2023-02-02
     mutable: true
+    type: uint32_t
   - name: cell_voltage_max
     ecu_id: 0x002
     current_value: 1.3
     date_modified: 2023-02-01
     mutable: false
+    type: uint32_t
   - name: cell_voltage_min  
     ecu_id: 0x020
     current_value: hello
     date_modified: 2023-01-09
     mutable: true
+    type: uint32_t
 - board: aircontrol
   recieve_id: 0x6E0
   send_id: 0x6E1
@@ -26,3 +29,4 @@
     current_value: true
     date_modified: 2023-02-09
     mutable: true
+    type: uint32_t
