faults -> fault in BUILD file

--- a/vehicle/mkvi/software/bms/tasks/BUILD
+++ b/vehicle/mkvi/software/bms/tasks/BUILD
@@ -3,9 +3,9 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 cc_library(
     name = "bms_tasks",
     srcs = [
-        "current_task.c",
-        "temperature_task.c",
-        "voltage_task.c",
+        "current.c",
+        "temperature.c",
+        "voltage.c",
     ],
     hdrs = [
         "tasks.h",
