Continue refactor of hitl code

--- a/projects/hitl/software/hitl/BUILD
+++ b/projects/hitl/software/hitl/BUILD
@@ -11,7 +11,7 @@ py_library(
     name = "hitl",
     srcs = [
         "cancontroller.py",
-        "ft4222_proxy.py",
+        "hardware.py",
         "iocontroller.py",
     ],
     imports = ["."],
