Python client for btldr (#186)
* Initial commit

* Fill in methods for python client

* Refactor to include on-the-fly DBC

* Refactor so that btldr DBC only uses offsets

* Refactor and add more to flash method

* --wip-- [skip ci]

* Add CLI and move tests to separate folder

* Add initial Python CLI for updatr

* --wip-- [skip ci]

* Remove accidentally-added throttle backup

* Remove updatr DBC file generation (might re-add later)

* Buildify

* Format python

* Add back test binary file

* Format

* Fix tests

* --wip-- [skip ci]

* --wip-- [skip ci]

* --wip-- [skip ci]

* Trigger build

* Format

* Format again

* Fix compilation issue that messed up btldr

* fmt

* Add helper script for flashing over CAN

* Add logging and progress bar

* Bug fixes and better logging messages for flashing

* Move ECU list to btldr folder

* Replace location of ECU list for more files

* Remove TODOs

* Updates from PR comments

--- a/projects/btldr/BUILD
+++ b/projects/btldr/BUILD
@@ -1,6 +1,6 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 load("//bazel:defs.bzl", "cc_firmware")
-load("//vehicle/mkv:ecus.bzl", "ECUS")
+load("//projects/btldr:ecus.bzl", "ECUS")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -16,6 +16,7 @@ package(default_visibility = ["//visibility:public"])
         defines = [
             "BTLDR_ID=" + data["btldr_id"],
         ],
+        is_btldr = True,
         linkopts = [
             "-static",
             "-nostartfiles",
