--- a/vehicle/mkvi/software/throttle/throttle.yml
+++ b/vehicle/mkvi/software/throttle/throttle.yml
@@ -18,18 +18,18 @@ publish:
           values:
             - THROTTLE_IDLE
             - THROTTLE_RUN
-            - THROTTLE_1_OUT_OF_RANGE
-            - THROTTLE_2_OUT_OF_RANGE
+            - THROTTLE_L_OUT_OF_RANGE
+            - THROTTLE_R_OUT_OF_RANGE
             - THROTTLE_POSITION_IMPLAUSIBILITY
             - THROTTLE_BRAKE_PRESSED
-      - name: throttle_1_pos
+      - name: throttle_l_pos
         slice: 8 + 16
         unit:
           type: int16_t
           name: '%' 
           offset: 0
           scale: 100/255
-      - name: throttle_2_pos
+      - name: throttle_r_pos
         slice: 24 + 16
         unit:
           type: int16_t
@@ -47,28 +47,28 @@ publish:
     id: 0x6C0
     freq_hz: 100
     signals:
-      - name: throttle_1_raw
+      - name: throttle_l_raw
         slice: 0 + 16
         unit:
           type: int16_t
           name: ''
           offset: 0
           scale: 1
-      - name: throttle_2_raw
+      - name: throttle_r_raw
         slice: 16 + 16
         unit:
           type: int16_t
           name: ''
           offset: 0
           scale: 1
-      - name: throttle_1_out_of_range
+      - name: throttle_l_out_of_range
         slice: 32 + 1
         unit:
           type: bool
           values:
             t: OUT_OF_RANGE
             f: IN_RANGE
-      - name: throttle_2_out_of_range
+      - name: throttle_r_out_of_range
         slice: 33 + 1
         unit:
           type: bool
