--- a/vehicle/mkvi/software/bms/BUILD
+++ b/vehicle/mkvi/software/bms/BUILD
@@ -50,6 +50,6 @@ exports_files([
 # Defines the CAN API library
 can_api_files(
     name = "can_api",
-    dbc = "//vehicle/mkv:mkv.dbc",
+    dbc = "//vehicle/mkvi:mkvi.dbc",
     yaml = ":bms.yml",
 )
