--- a/vehicle/mkv/software/throttle/BUILD
+++ b/vehicle/mkv/software/throttle/BUILD
@@ -1,8 +1,9 @@
-load("//bazel/tools:defs.bzl", "can_api_files")
+load("//bazel/tools:defs.bzl", "can_api_files", "tunables_library")
 load("//bazel:defs.bzl", "cc_firmware")
 
 exports_files([
     "throttle.yml",
+    "tunables.yml",
 ])
 
 cc_firmware(
@@ -25,6 +26,12 @@ cc_firmware(
         "//libs/timer",
         "//projects/btldr:btldr_lib",
     ],
+)
+
+tunables_library(
+    name = "throttle_tunables",
+    tunable_id = 0x6e0,
+    yaml = ":tunables.yml",
 )
 
 cc_library(
