All HitL chips work

--- a/projects/hitl/lib/BUILD
+++ b/projects/hitl/lib/BUILD
@@ -9,7 +9,7 @@ py_library(
         "gpio.py",
         "dac.py",
         "adc.py",
-        "can.py"
+        "can_controller.py"
     ],
     deps = [
         requirement("ft4222"),
