--- a/vehicle/mkvi/software/tests/BUILD
+++ b/vehicle/mkvi/software/tests/BUILD
@@ -4,16 +4,18 @@ pytest_test(
     name = "integration",
     srcs = [
         "conftest.py",
-        "test_shutdown.py",
+        # "test_shutdown.py",
         "test_rtd.py",
     ],
     deps = [
-        "//projects/hitl/lib:hitl"  # For HitL
+        "//projects/hitl/lib:hitl",  # For HitL
         "//projects/btldr/py_client:btldr"  # For flashing
     ],
     data = [
         "//vehicle/mkvi:mkvi.dbc",
-        "//vehicle/mkvi/software/air_control:air_control_patched.bin",
-        "//vehicle/mkvi/software/throttle:throttle_patched.bin",
+        # "//vehicle/mkvi/software/air_control:air_control_patched.bin",
+        # "//vehicle/mkvi/software/throttle:throttle_patched.bin",
+        # "//vehicle/mkvi/software/bms:bms_patched.bin",
+        # "//vehicle/mkvi/software/brakes:brakes_patched.bin",
     ],
 )
