--- a/vehicle/mkvi/software/tests/BUILD
+++ b/vehicle/mkvi/software/tests/BUILD
@@ -1,21 +1,21 @@
 load("//tools/pytest:defs.bzl", "pytest_test")
 
 pytest_test(
-    name = "tests",
+    name = "integration",
     srcs = [
         "conftest.py",
-        # "test_air.py",
-        "test_initial_checks.py",
+        "test_rtd.py",
     ],
     data = [
         "//vehicle/mkvi:mkvi.dbc",
         "//vehicle/mkvi/software/air_control:air_control_patched.bin",
     ],
-    target_compatible_with = [
-        "//bazel/constraints:atmega16m1",
-    ],
     deps = [
-        "//projects/hitl/lib:hitl",
-        "//projects/btldr/py_client:btldr",
+        "//projects/btldr/py_client:btldr",  # For flashing
+        "//projects/hitl/lib:hitl",  # For HitL
+    ],
+    tags = [
+        "manual",
+        "hardware",
     ],
 )
