Update AIR code and tests to pass

--- a/vehicle/mkvi/software/air_control/tests/BUILD
+++ b/vehicle/mkvi/software/air_control/tests/BUILD
@@ -4,7 +4,7 @@ pytest_test(
     name = "tests",
     srcs = [
         "conftest.py",
-        # "test_air.py",
+        "test_air.py",
         "test_initial_checks.py",
     ],
     data = [
