--- a/vehicle/mkvi/software/bms/BUILD
+++ b/vehicle/mkvi/software/bms/BUILD
@@ -33,6 +33,7 @@ cc_firmware(
         "//bazel/constraints:atmega16m1",
     ],
     deps = [
+        ":bms_config",
         ":can_api",
         "//libs/adc",
         "//libs/gpio",
