added open wire detection

--- a/vehicle/mkvi/software/bms/tasks/BUILD
+++ b/vehicle/mkvi/software/bms/tasks/BUILD
@@ -6,6 +6,7 @@ cc_library(
         "current.c",
         "temperature.c",
         "voltage.c",
+        "openwire.c",
     ],
     hdrs = [
         "tasks.h",
