Add MkVI BSPD Firmware (#225)
* updated code and cleaned up file structure

* file structure

* compile

* directory update

* more directory things

* Addressed review comments and fixed bugs.

* formatting

* formatting x3

* updated bspd.yml to properly reflect messages + corrected slice lengths

* snake case

* added test folder and .py file

* debugging thangs

* Hardcode BTLDR_ID for now

* Format

* minor change

* fmt

---------

Co-authored-by: Ian <iwalsh@olin.edu>
Co-authored-by: Jack Greenberg <j@jackgreenberg.co>
Co-authored-by: Amit Kumar <amitkh@gmail.com>

--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -6,5 +6,6 @@ dbc_gen(
     srcs = [
         "//vehicle/common/emeter:emeter.dbc",
         "//vehicle/common/motor_controller:motor_controller.dbc",
+        "//vehicle/mkvi/software/brakes:bspd.yml",
     ],
 )
