brakelight -> bspd message

--- a/vehicle/mkvi/software/throttle/throttle.yml
+++ b/vehicle/mkvi/software/throttle/throttle.yml
@@ -1,7 +1,7 @@
 name: throttle
 subscribe:
   # Transmit MOB is 0
-  - name: brakelight
+  - name: bspd
     mob: 1
   - name: dashboard
     mob: 2
