add mkvi support to the canviewer

--- a/projects/canviewer/BUILD
+++ b/projects/canviewer/BUILD
@@ -10,6 +10,7 @@ py_binary(
     data = [
         ":config.yml",
         "//vehicle/mkv:mkv.dbc",
+        "//vehicle/mkvi:mkvi.dbc",
     ],
     main = "canviewer.py",
     visibility = ["//visibility:public"],
