--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -24,6 +24,12 @@ max_temperature:
 min_temperature:
   processing_function: convertVtoT
 D1_DC_Bus_Voltage:
+temperature_1:
+  processing_function: convertVtoT
+temperature_2:
+  processing_function: convertVtoT
+
+
 Torque_Command:
 ---
 # Vehicle States (state and fault)
