--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -23,6 +23,8 @@ max_temperature:
   processing_function: convertVtoT
 min_temperature:
   processing_function: convertVtoT
+temperature_1:
+temperature_2:
 D1_DC_Bus_Voltage:
 temperature_1:
   processing_function: convertVtoT
