working temperature task!

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -20,9 +20,9 @@ air_p_status:
 air_n_status:
 pack_voltage:
 max_temperature:
-  processing_function: convertVtoT
+  # processing_function: convertVtoT
 min_temperature:
-  processing_function: convertVtoT
+  # processing_function: convertVtoT
 temperature_1:
 temperature_2:
 D1_DC_Bus_Voltage:
