--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -20,11 +20,10 @@ air_p_status:
 air_n_status:
 pack_voltage:
 max_temperature:
-  # processing_function: convertVtoT
+  processing_function: convertVtoT
 min_temperature:
-  # processing_function: convertVtoT
+  processing_function: convertVtoT
 D1_DC_Bus_Voltage:
-
 Torque_Command:
 ---
 # Vehicle States (state and fault)
@@ -33,6 +32,6 @@ air_control_critical:
   air_fault:
 bms_core:
   bms_state:
-  bms_fault:
+  bms_fault_state:
 throttle:
   throttle_state:
