--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -33,6 +33,8 @@ publish:
             # requested)
             # TODO: Implement error handle per CSC
             - CSC_MIA
+            - DA_MIA
+
       - name: bms_state
         slice: 4 + 4
         unit:
@@ -97,7 +99,7 @@ publish:
           values:
             t: Connected
             f: Disconnected
-
+  
   - name: bms_sense
     id: 0x011
     freq_hz: 100
@@ -130,6 +132,7 @@ publish:
           name: V
           offset: 0
           scale: 5 / 1024
+  
   - name: bms_metrics
     id: 0x510
     freq_hz: 100
@@ -148,6 +151,21 @@ publish:
           name: "errors"
           scale: 1
           offset: 0
+      #TODO: Fully define i2c error detection struct
+      # - name: ic
+      #   slice: 16 + 4
+      #   unit:
+      #     type: uint8_t
+      #     name: ""
+      #     scale: 1
+      #     offset: 0
+      # - name: i2c_error_count
+      #   slice: 20 + 8
+      #   unit:
+      #     type: uint8_t
+      #     name: ""
+      #     scale: 1
+      #     offset: 0
 
   - name: bms_debug
     id: 0x511
@@ -301,49 +319,28 @@ publish:
           scale: 0.0001
           offset: 0
 
-  - name: cfg_reg_a
+ - name: bms_cooling
     id: 0x403
-    freq_hz: 100
+    freq_hz: 4
     signals:
-      - name: bit_0
+      - name: duty_cycle
         slice: 0 + 8
         unit:
           type: uint8_t
-          name: "bits"
+          name: "percent"
           scale: 1
           offset: 0
-      - name: bit_1
-        slice: 8 + 8
+      - name: current_temp
+        slice: 8 + 16
         unit:
-          type: uint8_t
-          name: "bits"
-          scale: 1
+          type: uint16_t
+          name: "degC"
+          scale: .0001
           offset: 0
-      - name: bit_2
-        slice: 16 + 8
+      - name: previous_temp
+        slice: 24 + 16
         unit:
-          type: uint8_t
-          name: "bits"
-          scale: 1
-          offset: 0
-      - name: bit_3
-        slice: 24 + 8
-        unit:
-          type: uint8_t
-          name: "bits"
-          scale: 1
-          offset: 0
-      - name: bit_4
-        slice: 32 + 8
-        unit:
-          type: uint8_t
-          name: "bits"
-          scale: 1
-          offset: 0
-      - name: bit_5
-        slice: 40 + 8
-        unit:
-          type: uint8_t
-          name: "bits"
-          scale: 1
+          type: uint16_t
+          name: "degC"
+          scale: .0001
           offset: 0
