--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -11,5 +11,6 @@ dbc_gen(
         "//vehicle/mkvi/software/bms/charging:charging.yml",
         "//vehicle/mkvi/software/brakes:bspd.yml",
         "//vehicle/mkvi/software/throttle:throttle.yml",
+        "//vehicle/mkvi/software/dashboard:dashboard.yml",
     ],
 )
