wrote spi receive for charger + bazel success!

--- a/vehicle/common/charging/charging.yml
+++ b/vehicle/common/charging/charging.yml
@@ -18,9 +18,9 @@ publish:
           values:
             t: Charger connected
             f: Charger disconnected
-name: elcon_hk_j_440_10
-subscribe:
-publish:
+# name: elcon_hk_j_440_10
+# subscribe:
+# publish:
   # - name: charging_cmd
   #   id: 0x80
   #   freq_hz: 1
