Pull current task code from amit/bms-code-dev
Currently building, untested

--- a/vehicle/mkvi/software/bms/tasks/BUILD
+++ b/vehicle/mkvi/software/bms/tasks/BUILD
@@ -3,7 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 cc_library(
     name = "bms_tasks",
     srcs = [
-        # "current.c",
+        "current.c",
         # "temperature.c",
         # "voltage.c",
         # "openwire.c",
