--- a/bazel/platforms/BUILD
+++ b/bazel/platforms/BUILD
@@ -35,7 +35,7 @@ platform(
 platform(
     name = "stm32f103_arm",
     constraint_values = [
-        "//bazel/constraints:stm32f103c8t6",
+        "//bazel/constraints:stm32f103rbt6",
     ],
     parents = [
         "@arm_none_eabi//platforms:arm_none_generic",
