--- a/test_stm_image/BUILD
+++ b/test_stm_image/BUILD
@@ -6,7 +6,7 @@ cc_arm_firmware(
         "test.c",
     ],
     target_compatible_with = [
-        "//bazel/constraints:stm32f103c8t6",
+        "//bazel/constraints:stm32f103rbt6",
     ],
     visibility = ["//visibility:public"],
     deps = [
