Add bms fault enum for backwards compat with canviewer

--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -9,7 +9,14 @@ publish:
     freq_hz: 100
     signals:
       - name: bms_fault
-        slice: 0 + 16
+        slice: 0 + 1
+        unit:
+          type: enum
+          values:
+            - NONE
+            - FAULT
+      - name: bms_fault_code
+        slice: 1 + 16
         unit:
           type: uint16_t
           name: ""
@@ -40,7 +47,7 @@ publish:
           #   - CSC_MIA
           #   - DA_MIA
       - name: bms_state
-        slice: 16 + 4
+        slice: 17 + 4
         unit:
           type: enum
           values:
@@ -48,56 +55,56 @@ publish:
             - CHARGING
             - FAULT
       - name: pack_voltage
-        slice: 20 + 16
+        slice: 21 + 16
         unit:
           type: uint16_t
           name: V
           offset: 0
           scale: 0.0001 * 256
       - name: pack_current
-        slice: 36 + 12
+        slice: 37 + 12
         unit:
           type: int16_t
           name: A
           offset: 0
           scale: 0.004
       - name: cell_balancing_status
-        slice: 48 + 1
+        slice: 49 + 1
         unit:
           type: bool
           values:
             t: Cell balancing enabled
             f: Cell balancing disabled
       - name: regen_enabled
-        slice: 49 + 1
+        slice: 50 + 1
         unit:
           type: bool
           values:
             t: Regenerative braking enabled
             f: Regenerative braking disabled
       - name: current_limiting_enabled
-        slice: 50 + 1
+        slice: 51 + 1
         unit:
           type: bool
           values:
             t: Current limiting enabled
             f: Current limiting disabled
       - name: bspd_current_sense
-        slice: 51 + 1
+        slice: 52 + 1
         unit:
           type: bool
           values:
             t: Current sensed
             f: No current sensed
       - name: overcurrent_detect
-        slice: 52 + 1
+        slice: 53 + 1
         unit:
           type: bool
           values:
             t: Over-current detected
             f: No over-current detected
       - name: charger_connected
-        slice: 53 + 1
+        slice: 54 + 1
         unit:
           type: bool
           values:
