--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -25,6 +25,8 @@ min_temperature:
   processing_function: convertVtoT
 D1_DC_Bus_Voltage:
 Torque_Command:
+bms_fault_code:
+  processing_function: decode_bms_fault_msg
 ---
 # Vehicle States (state and fault)
 air_control_critical:
