Add documentation for faults

--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -23,30 +23,21 @@ publish:
           name: ""
           offset: 0
           scale: 1
-          # See fault.c for list of faults
-          #
-          # values:
-          #   - NONE
-          #   - UNDERVOLTAGE
-          #   - OVERVOLTAGE
-          #   - UNDERTEMPERATURE
-          #   - OVERTEMPERATURE
-          #   - DIAGNOSTICS_FAIL
-          #   - OPEN_WIRE
-          #   - OVERCURRENT
-          #   - PEC
-          #   - CHARGER_FAULT
-          #   - STATE_MACHINE
-          #   # NOTE: MIA refers to receiving all 1s from the CSC,
-          #   # This either means that there is a communication error
-          #   # (ex: CSC is not powered) or a register on the CSC was
-          #   # initialized to all 1s and the appropriate command was
-          #   # not given to update the value (ex: the cell voltage readings
-          #   # are initialized to all 1s until an ADC conversion is
-          #   # requested)
-          #   # TODO: Implement error handle per CSC
-          #   - CSC_MIA
-          #   - DA_MIA
+          # See fault.h for full documentation of faults. Faults are listed
+          # here for convenience.
+          # - NONE
+          # - UNDERVOLTAGE
+          # - OVERVOLTAGE
+          # - UNDERTEMPERATURE
+          # - OVERTEMPERATURE
+          # - DIAGNOSTICS_FAIL
+          # - OPEN_WIRE
+          # - OVERCURRENT
+          # - PEC
+          # - CHARGER_FAULT
+          # - STATE_MACHINE
+          # - CSC_MIA
+          # - DA_MIA
       - name: pack_voltage
         slice: 18 + 16
         unit:
