--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -154,32 +154,32 @@ publish:
     freq_hz: 100
     signals:
       - name: dbg_1
-        slice: 0 + 16
+        slice: 0 + 8
         unit:
-          type: uint16_t
+          type: uint8_t
           name: ""
           scale: 1
           offset: 0
       - name: dbg_2
-        slice: 16 + 16
+        slice: 8 + 16
         unit:
           type: uint16_t
           name: ""
           scale: 1
           offset: 0
       - name: dbg_3
-        slice: 32 + 16
+        slice: 24 + 16
         unit:
           type: uint16_t
           name: ""
           scale: 1
           offset: 0
-      - name: dbg_4
-        slice: 48 + 8
+      - name: vref2
+        slice: 40 + 16
         unit:
           type: uint16_t
-          name: ""
-          scale: 1
+          name: "volts"
+          scale: 0.0001
           offset: 0
       - name: charger_hardware_fault
         slice: 56 + 1
