Fixed bms.yml and added fault clearing

--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -273,7 +273,7 @@ publish:
             - REG_C
             - REG_D
             - REG_E
-            - REF_F
+            - REG_F
       - name: voltage_1
         slice: 16 + 16
         unit:
