Update BMS Fault Handling (#265)
* Update fault handling to allow multiple faults

* Set bms relay if not in fault state

* Add bms fault enum for backwards compat with canviewer

* Update canviewer to decode bms fault codes

* Fix grammar

* Remove redundant message in bms_core CAN slice

* Update variable based on bms.yml

* Add function to clear all faults

* Update grammar

* Comment fault abbreviations

* Clean up bms.yml

--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -8,98 +8,79 @@ publish:
     id: 0x10
     freq_hz: 100
     signals:
-      - name: bms_fault
-        slice: 0 + 4
-        unit:
-          type: enum
-          values:
-            - NONE
-            - UNDERVOLTAGE
-            - OVERVOLTAGE
-            - UNDERTEMPERATURE
-            - OVERTEMPERATURE
-            - DIAGNOSTICS_FAIL
-            - OPEN_WIRE
-            - OVERCURRENT
-            - PEC
-            - CHARGER_FAULT
-            - STATE_MACHINE
-            # NOTE: MIA refers to receiving all 1s from the CSC,
-            # This either means that there is a communication error
-            # (ex: CSC is not powered) or a register on the CSC was
-            # initialized to all 1s and the appropriate command was
-            # not given to update the value (ex: the cell voltage readings
-            # are initialized to all 1s until an ADC conversion is
-            # requested)
-            # TODO: Implement error handle per CSC
-            - CSC_MIA
-            - DA_MIA
-
       - name: bms_state
-        slice: 4 + 4
+        slice: 0 + 2
         unit:
           type: enum
           values:
             - ACTIVE
             - CHARGING
             - FAULT
+      # See fault.c for list of faults
+      - name: bms_fault_code
+        slice: 2 + 16
+        unit:
+          type: uint16_t
+          name: ""
+          offset: 0
+          scale: 1
       - name: pack_voltage
-        slice: 8 + 16
+        slice: 18 + 16
         unit:
           type: uint16_t
           name: V
           offset: 0
           scale: 0.0001 * 256
       - name: pack_current
-        slice: 24 + 12
+        slice: 34 + 12
         unit:
           type: int16_t
           name: A
           offset: 0
           scale: 0.004
       - name: cell_balancing_status
-        slice: 36 + 1
+        slice: 46 + 1
         unit:
           type: bool
           values:
             t: Cell balancing enabled
             f: Cell balancing disabled
       - name: regen_enabled
-        slice: 37 + 1
+        slice: 47 + 1
         unit:
           type: bool
           values:
             t: Regenerative braking enabled
             f: Regenerative braking disabled
       - name: current_limiting_enabled
-        slice: 38 + 1
+        slice: 48 + 1
         unit:
           type: bool
           values:
             t: Current limiting enabled
             f: Current limiting disabled
       - name: bspd_current_sense
-        slice: 39 + 1
+        slice: 49 + 1
         unit:
           type: bool
           values:
             t: Current sensed
             f: No current sensed
       - name: overcurrent_detect
-        slice: 40 + 1
+        slice: 50 + 1
         unit:
           type: bool
           values:
             t: Over-current detected
             f: No over-current detected
       - name: charger_connected
-        slice: 41 + 1
+        slice: 51 + 1
         unit:
           type: bool
           values:
             t: Connected
             f: Disconnected
-  
+
   - name: bms_sense
     id: 0x011
     freq_hz: 100
@@ -132,7 +113,7 @@ publish:
           name: V
           offset: 0
           scale: 5 / 1024
-  
+
   - name: bms_metrics
     id: 0x510
     freq_hz: 100
@@ -151,21 +132,6 @@ publish:
           name: "errors"
           scale: 1
           offset: 0
-      #TODO: Fully define i2c error detection struct
-      # - name: ic
-      #   slice: 16 + 4
-      #   unit:
-      #     type: uint8_t
-      #     name: ""
-      #     scale: 1
-      #     offset: 0
-      # - name: i2c_error_count
-      #   slice: 20 + 8
-      #   unit:
-      #     type: uint8_t
-      #     name: ""
-      #     scale: 1
-      #     offset: 0
 
   - name: bms_debug
     id: 0x511
