Rename csc mia for clarity

--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -132,7 +132,7 @@ publish:
     id: 0x510
     freq_hz: 100
     signals:
-      - name: csc_status
+      - name: csc_mia
         slice: 0 + 6
         unit:
           type: uint8_t
